# ustore

./: .clang-format  .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Dockerfile.rhel  LICENSE  README.md  TODO  VERSION  build.gradle  compile_commands.json  conanfile.py  go.mod  main.mk  openapi.yaml  pom.xml  presentation.md  publish.sh  publish_docker.sh  py11stubs.py  pyproject.toml  setup.py  toolchain
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  build_all.yml  build_and_test.yml  docker-image.yml  main.yml  package.json  prerelease.yml  publish_docker.yml  publish_docs.yml  publish_pypi.yml  python_java_go.yml  release.yml  static.yml  tests.yml
assets/: collection.schema.json  config_leveldb.json  config_rocksdb.ini  config_umem.json  db.config.json  db.config_leveldb.json  db.config_rocksdb.json  db.config_umem.json  db.schema.json  leveldb.json  presentation.md  rpc.proto  sample.csv  sample.ndjson  sample.parquet  tweet_template.json  ustore.txt
assets/configs/: db.json  db_on_leveldb.json  db_on_rocksdb.json  db_on_ucset.json  engine_ucset.json
assets/docs/: conf.py  config.dox  dash.rst  index.rst  page-flight-api.md  page-flight-api.py  page-install.md  page-related.md  page-rest-api.md  page-rest-api.py  page-similar.md  related.rst
assets/doxygen/: DoxygenLayout.xml  config.dox  header.html  main.dox
benchmarks/: README.md  mixed.hpp  tabular_graph.cpp  tabular_graph.py  twitter.cpp
cmake/: BuildUtils.cmake  argparse.cmake  arrow.cmake  arrow.sh  boost.cmake  boost.sh  bson.cmake  consistent_set.cmake  fmt.cmake  gbench.cmake  grpc.cmake  gtest.cmake  hiredis.cmake  jemalloc.cmake  json.cmake  leveldb.cmake  lz4.cmake  mpack.cmake  networkingts.cmake  oneapi.cmake  oneapi.sh  openssl.cmake  pcre2.cmake  pybind11.cmake  re2.cmake  readline.cmake  redis.cmake  rocksdb.cmake  simdjson.cmake  tbb.cmake  turbopfor.cmake  ucset.cmake  utils.cmake  yyjson.cmake
configs/: rocksdb.cfg
docker/: Dockerfile  publish.sh  publish_docker.sh
docs/: Makefile  ai.md  architecture.rst  benchmarks.rst  conf.dox  conf.py  config.dox  contributing.rst  index.rst  install.rst  related.md  tests.rst
docs/_static/: custom.js
docs/c/: index.rst  reference.rst
docs/cpp/: examples.rst  index.rst  reference.rst
docs/details/: implementation.rst  related.md  related.rst
docs/flight/: ddos.py  examples.rst  index.md  index.rst
docs/golang/: index.rst
docs/java/: index.rst  reference.rst
docs/pages/: install.rst
docs/python/: examples.rst  index.rst  reference.rst
docs/rest/: example.py  examples.rst  index.md  index.rst
doxygen_docs/: header.html  main.mk
doxygen_docs/awesome/: main.mk  source
golang/: README.md  pack.sh  publish_go.sh  run.sh  test.go  testc.go  ukv.go  ukv_stl.go  ukv_stl_test.go  ukv_test.go
golang/internal/: ukv.go
golang/level/: ukv.go  ukv_test.go
golang/leveldb/: ukv.go
golang/rocks/: ukv.go  ukv_test.go
golang/rocksdb/: ukv.go
golang/stl/: ukv.go  ukv_test.go
golang/umem/: ukv.go
include/: ukv.h  ukv.hpp  ukv_docs.h  ukv_docs.hpp  ukv_graph.h  ukv_graph.hpp  utility.hpp
include/ukv/: README.md  arrow.h  blobs.h  db.h  db.hpp  docs.h  docs.hpp  graph.h  graph.hpp  media.h  paths.h  ukv.h  ukv.hpp  utility.hpp  utility_ranges.hpp  utility_sfinae.hpp  utility_status.hpp  utility_types.hpp  vectors.h
include/ustore/: arrow.h  blobs.h  db.h  docs.h  graph.h  media.h  paths.h  vectors.h
java/: DataBase.java  README.md  Transaction.java  com_unum_ukv_DataBase.c  com_unum_ukv_DataBase.h  com_unum_ukv_Shared.c  com_unum_ukv_Shared.h  com_unum_ukv_Transaction.c  com_unum_ukv_Transaction.h  pack.sh  run.sh
java/test/: DataBaseLevelDBTest.java  DataBaseLevelTest.java  DataBaseRocksDBTest.java  DataBaseRocksTest.java  DataBaseSTLTest.java  DataBaseUCSetTest.java  DataBaseUMemTest.java
javascript/: README.md
python/: README.md  acid_test.py  build_debug.sh  cast.hpp  cast_args.hpp  crud.hpp  crud_test.py  database.cpp  doc_test.py  documents.cpp  mmm_bank_test.py  mmm_recommender_test.py  networkx.cpp  networkx_test.py  nlohmann.hpp  numpy_test.py  pack.sh  pandas.cpp  publish.sh  py11stubs.py  pybind.cpp  pybind.hpp  pybind_database.cpp  pybind_dict.cpp  pybind_dict.hpp  pybind_networkx.cpp  pybind_pandas.cpp  rest_semitest.py  rest_test.py  run.sh  sampler.py  test.py  transaction_test.py  ukv.cpp  ukv_pybind.cpp  ukv_test.py
python/algorithms/: README.md  bench.py  louvain.cpp  louvain.py
python/community/: louvain.py
python/examples/: banks_atm_olap.ipynb  banks_atm_olap.py  banks_atm_olap.yml  browser.py  community.py  consistent_dict.py  dataloader.py  (+6 more)
rust/: .clippy.toml  .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  rustfmt.toml  wrapper.h
rust/src/: error.rs  lib.rs
rust/src/ukv/: bindings.rs
src/: README.md  arrow.hpp  arrow_client.cpp  arrow_client.py  arrow_helpers.hpp  arrow_server.cpp  arrow_server2.cpp  arrow_table.cpp  backend_leveldb.cpp  backend_rocksdb.cpp  backend_stl.cpp  engine_leveldb.cpp  engine_ram.cpp  engine_rocksdb.cpp  engine_stl.cpp  engine_ucset.cpp  engine_umem.cpp  engine_umemkv.cpp  flight_client.cpp  flight_server.cpp  helpers.hpp  logic_docs.cpp  logic_graph.cpp  lru.hpp  modality_docs.cpp  modality_graph.cpp  modality_nlohmann_docs.cpp  modality_paths.cpp  modality_simdocs.cpp  modality_vectors.cpp  redis_client.cpp  rest_server.cpp  run_rest.sh  test.cpp  ukv_beast_client.cpp  ukv_beast_server.cpp  ukv_docs_nlohmann.cpp  ukv_graph_pfor.cpp  ukv_grpc.proto  ukv_leveldb.cpp  (+5 more)
tests/: README.md  api.cpp  c_test.cpp  compilation.cpp  imp_exp_test.cpp  merge.json  patch.json  stress_atomicity.cpp  stress_insert_atomic_isolated.cpp  stress_linearizability.cpp  stress_serializable_transactions.cpp  test_api.cpp  test_compilation.cpp  test_imp_exp.cpp  test_modality.cpp  test_tools.cpp  test_units.cpp  transaction_stress_test.cpp  unit.cpp  units.cpp
tools/: README.md  dataset.cpp  dataset.h
(+164 files in other folders)
